--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   
-    <a href="#" onclick="this.textContent ='Hakan'"
-    id="todoClearButton" class="btn btn-primary btn-sm m-3">Click</a>
+    <a href="#" onclick="chngeTitle()"
+    id="todoClearButton" class="btn btn-primary btn-sm m-3">Submit</a>
 
     <!-- <script src="javascript.js"></script> -->
     <script src="trial.js"></script> </script>
