--- a/index.html
+++ b/index.html
@@ -12,8 +12,16 @@
 </head>
 <body>
   
-    <a href="#" onclick="chngeTitle()"
-    id="todoClearButton" class="btn btn-primary btn-sm m-3">Submit</a>
+    <h1 id="head">DOM lesson one</h1>
+<p id="paragraph">Hello world!</p>
+
+<div id="div1">
+    <p id="p1">p1 paragrafı</p>
+    <p id="p2">p2 paragrafı</p>
+    <p id="p3">p3 paragrafı</p>
+</div>
+
+<p id="demo"></p>
 
     <!-- <script src="javascript.js"></script> -->
     <script src="trial.js"></script> </script>
