--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
 </head>
 <body>
   
-    <h1 id="head">DOM lesson one</h1>
+<h1 id="head">DOM lesson one</h1>
 <p id="paragraph">Hello world!</p>
 
 <div id="div1">
     <p id="p1">p1 paragrafı</p>
     <p id="p2">p2 paragrafı</p>
     <p id="p3">p3 paragrafı</p>
+</div>
+
+<div class="div2">Div2
+    <p id="p4">p1 paragrafı</p>
+    <p id="p5">p2 paragrafı</p>
+    <p id="p6">p3 paragrafı</p>
 </div>
 
 <p id="demo"></p>
