--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <p id="p3">p3 paragrafı</p>
 </div>
 
-<div class="div2">Div2
+<!-- <div class="div2">Div2
     <p id="p4">p1 paragrafı</p>
     <p id="p5">p2 paragrafı</p>
     <p id="p6">p8 paragrafı</p>
-</div>
+</div> -->
 
 
 
